# tpt-telos

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO 1260713.md  TODO.md  spec.txt  spec2.txt  tmp_check.txt
.github/workflows/: ci.yml  release.yml
crates/telos-agent/: Cargo.toml  README.md
crates/telos-agent/src/: lib.rs  llm_agent.rs  static_agent.rs
crates/telos-agent/tests/: static_agent.rs  transpile.rs
crates/telos-cli/: Cargo.toml  README.md
crates/telos-cli/src/: main.rs
crates/telos-cli/tests/: cli.rs
crates/telos-codegen/: Cargo.toml  README.md
crates/telos-codegen/src/: eject.rs  ffi.rs  go.rs  lib.rs  project.rs  proof.rs  python.rs
crates/telos-codegen/tests/: gen.rs
crates/telos-ir/: Cargo.toml  README.md
crates/telos-ir/src/: extract.rs  ir.rs  lib.rs
crates/telos-ir/tests/: extract.rs
crates/telos-lsp/: Cargo.toml  README.md
crates/telos-lsp/src/: analysis.rs  lib.rs
crates/telos-lsp/tests/: lsp.rs
crates/telos-parser/: Cargo.toml  README.md
crates/telos-parser/src/: ast.rs  grammar.ebnf  lexer.rs  lib.rs  parser.rs  span.rs
crates/telos-parser/tests/: lexer.rs  parser.rs  span.rs
crates/telos-router/: Cargo.toml  README.md
crates/telos-router/src/: lib.rs
crates/telos-verifier/: Cargo.toml  README.md
crates/telos-verifier/proptest-regressions/: solver.txt
crates/telos-verifier/src/: cluster.rs  lib.rs  solver.rs  verify.rs  z3_solver.rs
crates/telos-verifier/tests/: interval.rs  nested.rs  wallet.rs
examples/: array_test.telos  broken.telos  cross_module.telos  disjunction.telos  eject.telos  float.telos  intent.telos  interval.telos  microservice.telos  nested.telos  physics.telos  wallet.telos
