[workspace]
resolver = "2"
members = [
    "crates/telos-parser",
    "crates/telos-ir",
    "crates/telos-verifier",
    "crates/telos-router",
    "crates/telos-agent",
    "crates/telos-codegen",
    "crates/telos-lsp",
    "crates/telos-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
