[workspace]
resolver = "2"
members = [
    "crates/telos-parser",
    "crates/telos-ir",
    "crates/telos-verifier",
    "crates/telos-router",
    "crates/telos-agent",
    "crates/telos-codegen",
    "crates/telos-lsp",
    "crates/telos-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
authors = ["tpt-solutions"]
repository = "https://github.com/tpt-solutions/tpt-telos"
homepage = "https://github.com/tpt-solutions/tpt-telos"
documentation = "https://docs.rs/telos-cli"
readme = "README.md"
keywords = ["verification", "compiler", "transpiler", "smt", "formal-methods"]
categories = ["compilers", "development-tools", "command-line-utilities"]

[profile.release]
opt-level = 3
