[package]
name = "telos-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enables the real LLM-backed agent (requires network + an API key at runtime).
llm = ["ureq", "serde_json"]

[dependencies]
telos-parser = { path = "../telos-parser" }
telos-ir = { path = "../telos-ir" }
telos-verifier = { path = "../telos-verifier" }
telos-router = { path = "../telos-router" }
ureq = { version = "2", features = ["json"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
