[package]
name = "telos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the tpt-telos compiler"

[[bin]]
name = "telos"
path = "src/main.rs"

[dependencies]
telos-parser = { path = "../telos-parser" }
telos-ir = { path = "../telos-ir" }
telos-verifier = { path = "../telos-verifier" }
telos-router = { path = "../telos-router" }
telos-agent = { path = "../telos-agent" }
telos-codegen = { path = "../telos-codegen" }
clap = { version = "4", features = ["derive"] }

[features]
# Enables the `telos transpile --llm` / `build --llm` real LLM backend.
llm = ["telos-agent/llm"]
