[package]
name = "tpt-telos"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["cli", "compiler", "verification", "transpiler", "telos"]
categories = ["command-line-utilities", "compilers"]
description = "Command-line interface for the tpt-telos compiler"

[[bin]]
name = "telos"
path = "src/main.rs"

[dependencies]
tpt-telos-parser = { path = "../telos-parser", version = "0.1.0" }
tpt-telos-ir = { path = "../telos-ir", version = "0.1.0" }
tpt-telos-verifier = { path = "../telos-verifier", version = "0.1.0" }
tpt-telos-router = { path = "../telos-router", version = "0.1.0" }
tpt-telos-agent = { path = "../telos-agent", version = "0.1.0" }
tpt-telos-codegen = { path = "../telos-codegen", version = "0.1.0" }
tpt-telos-lsp = { path = "../telos-lsp", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enables the `telos transpile --llm` / `build --llm` real LLM backend.
llm = ["tpt-telos-agent/llm"]
# Enables the `--solver z3` option for exact nonlinear arithmetic.
z3 = ["tpt-telos-verifier/z3"]

[dev-dependencies]
serde_json = "1"
