[package]
name = "tpt-telos-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Rust/Go dual-backend code generation and FFI bridge for tpt-telos"

[dependencies]
tpt-telos-parser = { path = "../telos-parser", version = "0.1.0" }
tpt-telos-agent = { path = "../telos-agent", version = "0.1.0" }
tpt-telos-router = { path = "../telos-router", version = "0.1.0" }
