[package]
name = "telos-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol server for tpt-telos"

[dependencies]
telos-parser = { path = "../telos-parser" }
telos-ir = { path = "../telos-ir" }
telos-verifier = { path = "../telos-verifier" }
telos-router = { path = "../telos-router" }
telos-agent = { path = "../telos-agent" }
telos-codegen = { path = "../telos-codegen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
