[package]
name = "tpt-telos-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/tpt-telos-parser"
description = "Lexer, parser and AST for the tpt-telos language"

[dependencies]
