[package]
name = "tpt-telos-router"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/tpt-telos-router"
description = "Context router that classifies tpt-telos modules to Rust or Go backends"

[dependencies]
tpt-telos-parser = { path = "../telos-parser", version = "0.1.0" }
