[package]
name = "tpt-telos-router"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/tpt-telos-router"
keywords = ["router", "codegen", "boundary", "dual-backend", "telos"]
categories = ["compilers", "development-tools"]
description = "Context router that classifies tpt-telos modules to Rust or Go backends"

[dependencies]
tpt-telos-parser = { path = "../telos-parser", version = "0.1.0" }
