[package]
name = "tpt-telos-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/tpt-telos-verifier"
keywords = ["smt", "solver", "verification", "formal-methods", "z3"]
categories = ["algorithms", "development-tools"]
description = "Self-contained SMT-style verifier (QF_LRA) for tpt-telos constraints"

[features]
default = []
z3 = ["dep:z3"]

[dependencies]
tpt-telos-ir = { path = "../telos-ir", version = "0.1.0" }
z3 = { version = "0.12", optional = true }

[dev-dependencies]
tpt-telos-parser = { path = "../telos-parser", version = "0.1.0" }
proptest = "1"
